# vehicle-analyzer

./: .gitignore  README.md  main.py  pyproject.toml
utils/: captioning.py  color_utils.py  detect.py
